# filemanip

./: .hgtags  FileManip.cabal  README  README.markdown  filemanip.cabal
System/FilePath/: Error.hs  Find.hs  Glob.hs  GlobPattern.hs  Manip.hs
examples/: Simple.hs
