Name:           FileManip
Version:        0.3.1
License:        BSD3
License-File:   LICENSE
Author:         Bryan O'Sullivan <bos@serpentine.com>
Maintainer:     Bryan O'Sullivan
Synopsis:       Expressive file and directory manipulation for Haskell.
Category:       System
Description:    A Haskell library for working with files and directories.
                Includes code for pattern matching, finding files,
                modifying file contents, and more.
Cabal-version:  >= 1.2

Flag splitBase
  Description:     Choose the new, split-up base package.

Library
  if flag(splitBase)
    Build-Depends: base, bytestring, directory, filepath, mtl, unix
  else
    Build-Depends: base, filepath, mtl, unix

  GHC-Options:    -Wall -O2
  Exposed-Modules:
          System.FilePath.Find,
          System.FilePath.Glob,
          System.FilePath.GlobPattern,
          System.FilePath.Manip
  Extra-Source-Files: README
